; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_loop-iv.c_analyzed_for_bivness_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_loop-iv.c_analyzed_for_bivness_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtx_iv = type { i32 }
%struct.biv_entry = type { %struct.rtx_iv }

@bivs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.rtx_iv*)* @analyzed_for_bivness_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @analyzed_for_bivness_p(i32 %0, %struct.rtx_iv* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.rtx_iv*, align 8
  %6 = alloca %struct.biv_entry*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.rtx_iv* %1, %struct.rtx_iv** %5, align 8
  %7 = load i32, i32* @bivs, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @REGNO(i32 %9)
  %11 = call %struct.biv_entry* @htab_find_with_hash(i32 %7, i32 %8, i32 %10)
  store %struct.biv_entry* %11, %struct.biv_entry** %6, align 8
  %12 = load %struct.biv_entry*, %struct.biv_entry** %6, align 8
  %13 = icmp ne %struct.biv_entry* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %21

15:                                               ; preds = %2
  %16 = load %struct.rtx_iv*, %struct.rtx_iv** %5, align 8
  %17 = load %struct.biv_entry*, %struct.biv_entry** %6, align 8
  %18 = getelementptr inbounds %struct.biv_entry, %struct.biv_entry* %17, i32 0, i32 0
  %19 = bitcast %struct.rtx_iv* %16 to i8*
  %20 = bitcast %struct.rtx_iv* %18 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %19, i8* align 4 %20, i64 4, i1 false)
  store i32 1, i32* %3, align 4
  br label %21

21:                                               ; preds = %15, %14
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local %struct.biv_entry* @htab_find_with_hash(i32, i32, i32) #1

declare dso_local i32 @REGNO(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
